<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation = "horizontal"
    android:weightSum = "3"
    android:layout_gravity = "bottom"
    tools:context = "com.group0578.hpgame.Level3.Level3MainActivity" >

    <Button
        android:id="@+id/button4"
        android:layout_width = "0dp"
        android:layout_weight = "1"
        android:layout_height = "wrap_content"
        android:text="@string/button4"
        android:onClick="moveWandLeft" />

    <Button
        android:id="@+id/button5"
        android:layout_width = "0dp"
        android:layout_weight = "1"
        android:layout_height = "wrap_content"
        android:text="@string/button5"
        android:onClick="createBlast" />

    <Button
        android:id="@+id/button6"
        android:layout_width = "0dp"
        android:layout_weight = "1"
        android:layout_height = "wrap_content"
        android:text="@string/button6"
        android:onClick="moveWandLeft" />

    <view
        android:id="@+id/view"
        class="com.group0578.hpgame.Level3.ScreenView"
        android:layout_width="410dp"
        android:layout_height="605dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</LinearLayout>